[#38031621] Fix layout issues with multiple choice editing. [#38030753]
https://www.pivotaltracker.com/story/show/38031621
https://www.pivotaltracker.com/story/show/38030753

--- a/app/assets/stylesheets/web/app.scss
+++ b/app/assets/stylesheets/web/app.scss
@@ -468,6 +468,12 @@ p.note {
 .item_selectable .container_element .action_menu, .item_selected .container_element .action_menu {
   border-bottom: none; }
 
+table.multiple_choice_item {
+  td {
+    padding-left: 1em;
+  }
+}
+
 #wrapper.run_html {
   background: white;
 }
